restriction service for clickable games

--- a/frontend/src/app/core/components/cockpit/landing-page/landing-page.component.html
+++ b/frontend/src/app/core/components/cockpit/landing-page/landing-page.component.html
@@ -1,25 +1,28 @@
 <div class="cyber-lab-container">
-        <app-header [userName]="game.currentUser ? game.currentUser.name : ''" [score]="game.points" [progress]="75"></app-header>
+        <app-header [userName]="game.currentUser ? game.currentUser.name : ''" [score]="game.points"
+                [progress]="75"></app-header>
 
         <div class="spion">
-                <app-spy [gameStep]="this.game.currentGameStep" (clickedNext)="this.game.nextGameStep()"></app-spy>
+                <app-spy [gameStep]="this.game.currentGameStep" (clickedNext)="next()"></app-spy>
         </div>
         <div class="circle-container">
                 <div [ngClass]="{ 'gray': !this.intro.getout()[1] }" class="icon robot"><app-icon
-                                imageSrc="./assets/image/AI.png" iconName="AI" link="./ai"></app-icon>
+                                imageSrc="./assets/image/AI.png" iconName="AI"
+                                (click)="clicked(scenarios.AI, './ai')"></app-icon>
                 </div>
                 <div class="icon shopping" [ngClass]="{ 'gray': !this.intro.getout()[2] }"><app-icon
                                 imageSrc="./assets/image/onlineshopping.png" iconName="Online Shopping"
-                                link="shopping"></app-icon></div>
+                                (click)="clicked(scenarios.Shopping, './shopping')"></app-icon></div>
                 <div class="icon cookies" [ngClass]="{ 'gray': !this.intro.getout()[3] }"><app-icon
-                                imageSrc="./assets/image/Cookies.png" iconName="Cookies" link="./cookies"></app-icon>
+                                imageSrc="./assets/image/Cookies.png" iconName="Cookies"
+                                (click)="clicked(scenarios.Cookies, './cookies')"></app-icon>
                 </div>
                 <div class="icon security" [ngClass]="{ 'gray': !this.intro.getout()[0] }"><app-icon
-                                imageSrc="./assets/image/Laptop.png" iconName="Password" link="./computer"></app-icon>
+                                imageSrc="./assets/image/Laptop.png" iconName="Password"
+                                (click)="clicked(scenarios.Computer, './computer')"></app-icon>
                 </div>
                 <div class="icon social" [ngClass]="{ 'gray': !this.intro.getout()[4] }"
-                        (click)="setScenarioService(scenarios.SocialMedia)"><app-icon
-                                imageSrc="./assets/image/socialmedia.png" iconName="Social Media"
-                                link="./socialmedia"></app-icon></div>
+                        (click)="clicked(scenarios.SocialMedia, './socialmedia')"><app-icon
+                                imageSrc="./assets/image/socialmedia.png" iconName="Social Media"></app-icon></div>
         </div>
 </div>
