--- a/frontend/src/app/core/components/cockpit/landing-page/icon/icon.component.scss
+++ b/frontend/src/app/core/components/cockpit/landing-page/icon/icon.component.scss
@@ -1,43 +1,54 @@
 $breakpoint-medium: 1320px;
+
 .icon-container {
-    position: relative;
-    width: 17vw;
-    height: 17vw;
-    overflow: hidden;
-    cursor: pointer;
+  position: relative;
+  width: 17vw;
+  height: 17vw;
+  overflow: hidden;
+  cursor: pointer;
+  border-radius: 50%;
+}
+
+.icon-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.icon-name {
+  // white-space: nowrap;
+  position: absolute;
+  top: 50%;
+  font-family: 'Righteous', sans-serif;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #f3f3f3;
+  font-size: 32px;
+  font-weight: bold;
+  opacity: 0;
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+
+.icon-container:hover .icon-name {
+  opacity: 1;
+  transform: translate(-50%, -60%);
+}
+
+.icon-container:hover img {
+  filter: brightness(0.3);
+}
+
+@media (max-width: $breakpoint-medium) {
+  .icon-container {
+    margin: 10px; // Adds space between icons
+    min-width: 150px;
+    min-height: 150px;
+
   }
-  
-  .icon-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-  
-  .icon-name {
-    // white-space: nowrap;
-    position: absolute;
-    top: 50%;
-    font-family: 'Righteous', sans-serif;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #6C757D;
-    font-size: 32px;
-    font-weight: bold;
-    opacity: 0;
-    transition: opacity 0.3s ease, transform 0.3s ease;
-  }
-  
-  .icon-container:hover .icon-name {
-    opacity: 1;
-    transform: translate(-50%, -60%);
-  }
-  
-  @media (max-width: $breakpoint-medium) {
-    .icon-container {
-      margin: 10px; // Adds space between icons
-      min-width: 150px;
-      min-height: 150px;
-  
-    }
-    
-  }
+
+}
+
+.completed{
+  filter: brightness(0.1);
+}
