--- a/frontend/src/app/core/components/cockpit/landing-page/landing-page.component.scss
+++ b/frontend/src/app/core/components/cockpit/landing-page/landing-page.component.scss
@@ -109,46 +109,73 @@ app-header {
   .shopping {
     transform: translate(0vw, -25vw);
   }
+
   .security {
     transform: translate(-40vw, 12vw);
   }
+
   .robot {
     transform: translate(-25vw, -5vw);
   }
+
   .cookies {
     transform: translate(25vw, -5vw);
   }
+
   .social {
     transform: translate(40vw, 12vw);
+  }
+
+  @media (max-width: $breakpoint-small) {
+    .icon {
+      position: absolute;
+      transform: none;
+      font-size: 1.5rem;
+    }
+
+    .circle-container {
+      position: relative;
+      width: 200px;
+      height: 200px;
+      margin-bottom: 1.5rem;
+    }
+
+    .security {
+      transform: translate(-30vw, 12vw);
+    }
+
+    .robot {
+      transform: translate(-25vw, -16vw);
+    }
+
+    .shopping {
+      transform: translate(0vw, -37vw);
+    }
+
+    .cookies {
+      transform: translate(25vw, -16vw);
+    }
+
+    .social {
+      transform: translate(30vw, 12vw);
+    }
+  }
 }
 
-@media (max-width: $breakpoint-small) {
-  .icon {
-    position: absolute;
-    transform: none;
-    font-size: 1.5rem;
-  }
+.image-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  pointer-events: none; /* Verhindert, dass das Bild das Klicken auf andere Elemente blockiert */
+}
 
-  .circle-container {
-    position: relative;
-    width: 200px;
-    height: 200px;
-    margin-bottom: 1.5rem;
-  }
-
-  .security {
-    transform: translate(-30vw, 12vw);
-  }
-  .robot {
-    transform: translate(-25vw, -16vw);
-  }
-  .shopping {
-    transform: translate(0vw, -37vw);
-  }
-  .cookies {
-    transform: translate(25vw, -16vw);
-  }
-  .social {
-    transform: translate(30vw, 12vw);
-  }
-}}
+.image-overlay img {
+  max-width: 40%;
+  max-height: 40%;
+  z-index: 10;
+}
