--- a/frontend/src/app/core/components/dialog/dialog.component.html
+++ b/frontend/src/app/core/components/dialog/dialog.component.html
@@ -4,7 +4,7 @@
             (finishedChangedTo)="finishedChanged($event)"></app-speaking-text>
         <div class="dialog-action" *ngIf="gameStep ? gameStep.canClickNext : false">
             <button mat-flat-button (click)="goToNext()"
-                [hidden]="!showNextButton">
+                [hidden]="!showNextButton" class="next-button">
                 Weiter <mat-icon iconPositionEnd>chevron_right</mat-icon></button>
         </div>
         <div class="left-point" [ngClass]="{rightPointer: isRight, leftPointer: !isRight, bakerPointer: who === 'baker'}"></div>
