--- a/frontend/src/app/core/components/cockpit/account/account.component.scss
+++ b/frontend/src/app/core/components/cockpit/account/account.component.scss
@@ -1,6 +1,6 @@
 .account-card {
-  width: 290px;
-  height: 605px;
+  width: 19.3vw;
+  height: 40.3vw;
   border: 1px solid #000000;
   border-radius: 14%;
   overflow: hidden;
