--- a/frontend/src/app/features/scoreboard/scorelist/scorelist.component.html
+++ b/frontend/src/app/features/scoreboard/scorelist/scorelist.component.html
@@ -18,7 +18,7 @@
                 <div class="medal">
                     <img src="/assets/scoreboard/silver.png">
                 </div>
-                <div style="height: 100%; vertical-align: middle;">{{this.data[1].user.name}}</div>
+                <div>{{this.data[1].user.name}}</div>
                 <div>{{this.data[1].user.points}}</div>
             </div>
             <div class="entry">
