until step 22 is finish

--- a/frontend/src/app/features/shopping/shopping.component.html
+++ b/frontend/src/app/features/shopping/shopping.component.html
@@ -1,6 +1,7 @@
 <div class="container">
-  <app-website></app-website>
-  <!-- <div class="spy-column">
+  <app-website [ngClass]="{'hidden': (shopping.currentIndex < 4)}" class="webapp"></app-website>
+   <app-shopping-list class="shoppinglist" [ngClass]="{'hidden': !(shopping.currentIndex == 2)}"></app-shopping-list>
+  <div class="spy-column" [class.hidden] = "shopping.Hidespy" [ngClass]="spyclass()">
       <app-spy [isRight] = "true" [gameStep]="shopping.currentGameStep" (clickedNext)="shopping.next()"></app-spy>
-  </div> -->
+  </div>
 </div>
