--- a/frontend/src/app/features/shopping/shopping-list/shopping-list.component.html
+++ b/frontend/src/app/features/shopping/shopping-list/shopping-list.component.html
@@ -1,11 +1,1 @@
-<div class="container">
-  <div class="sticky-note-back"></div>  <!-- Background paper -->
-  <div class="sticky-note">
-    <h1>Deine Shopping Liste:</h1>
-    <ul>
-      <li>Jacke</li>
-      <li>Schuhe</li>
-      <li>Accessoire (Schal/Mütze/Gürtel/Tasche/...)</li>
-    </ul>
-  </div>
-</div>
+<img src="assets/shopping/shoppinglist.png" alt="shoppinglist" class="shoppinglist">
