--- a/frontend/src/app/features/shopping/shopping.component.scss
+++ b/frontend/src/app/features/shopping/shopping.component.scss
@@ -1,18 +1,21 @@
+.shoppinglist {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -65%);
+}
+.webapp{
+  transition: opacity 0.7s ease-in-out, visibility 0.7s ease-in-out;
+}
 .container {
   background-image: url('/assets/shopping/1back.png');
   background-size: cover;
-  background-position: center center; /* Ensures the image stays centered */
+  background-position: center center;
   height: 100vh;
   width: 100vw;
   position: relative;
   opacity: 1;
   transition: opacity 0.7s ease-in-out, visibility 0.7s ease-in-out;
-
-  &.hidden {
-    opacity: 0;
-    visibility: hidden;
-    display: none;
-  }
 
   .spy-column {
     position: absolute;
@@ -20,29 +23,46 @@
     right: 0px;
     animation: fadeIn 0.7s ease-in-out;
   }
+  .spy0{
+    bottom: 0px;
+  }
+  .spy1{
+    bottom: 48px;
+  }
+  .spy2{
+    bottom: 100px;
+  }
 }
+
+.hidden {
+  opacity: 0;
+  visibility: hidden;
+  display: none;
+}
+
 :host {
   display: block;
   width: 100%;
   height: 100vh;
-  background-color: black; // Matches the fallback
-  overflow: hidden; // Avoid unwanted scrollbars
+  background-color: black;
+  overflow: hidden;
 }
+
 @keyframes fadeIn {
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
 }
 
-// Apply the animation to the body or a specific element
+
 .container {
   animation: fadeIn 0.7s ease-in-out;
 }
 
-// For specific elements, use:
 .spy-column {
   animation: fadeIn 0.7s ease-in-out;
 }
