--- a/frontend/src/app/features/shopping/website/website.component.scss
+++ b/frontend/src/app/features/shopping/website/website.component.scss
@@ -1,22 +1,164 @@
+.back1,
+.back2 {
+    background-color: #383535;
+}
+
+.back3 {
+    background-color: white;
+}
+
+.header1,
+.header3 {
+    background-color: #1d1d1d;
+    box-shadow: 10px rgba(0, 0, 0, 0.2);
+    color: #fff;
+}
+
+.header2 {
+    background: linear-gradient(90deg, #000000, #5a00a1, #000000);
+    color: #fff;
+}
+
+.title1,
+.title2 {
+    color: white;
+}
+
+.title3 {
+    color: #000;
+}
+
+.subtitle1,
+.subtitle2 {
+    color: #d6c400;
+}
+
+.subtitle3 {
+    color: #000;
+}
+
+.discount1 {
+    background-color: #f1c40f;
+    color: #000;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+
+}
+
+.discount2 {
+    background-color: #e800e8;
+    color: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.discount3 {
+    background-color: #1d1d1d;
+    color: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.price1 {
+    color: #f1c40f;
+}
+
+.price2 {
+    color: #e800e8;
+    ;
+}
+
+.price3 {
+    color: #000;
+}
+
+.button1 {
+    background-color: transparent;
+    color: #f1c40f;
+    border: 2px solid #f1c40f;
+    transition: all 0.3s ease;
+
+    &:hover {
+        background-color: #f1c40f;
+        color: #000;
+    }
+}
+
+.button2 {
+    background-color: transparent;
+    color: orange;
+    border: 2px solid orange;
+    transition: all 0.3s ease;
+
+    &:hover {
+        background-color: orange;
+        color: white;
+    }
+}
+
+.button3 {
+    background-color: transparent;
+    color: black;
+    border: 2px solid black;
+    transition: all 0.3s ease;
+
+    &:hover {
+        background-color: black;
+        color: white;
+    }
+}
+
+.info1,
+.info2 {
+    background-color: rgba(25, 25, 25, 0.9); // Semi-transparent dark background
+    color: #fff;
+}
+
+.info3 {
+    background-color: rgba(255, 255, 255, 0.9); // Semi-transparent dark background
+    color: #000;
+}
+
+.lastb1 {
+    background-color: #f1c40f;
+    color: #000;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+
+    &:hover {
+        background-color: #d4a30a;
+        box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
+    }
+}
+
+.lastb2 {
+    background-color: #5a00a1;
+    color: white;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease;
+
+    &:hover {
+        background-color: #50008e;
+        box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
+    }
+}
+
 .deals-container {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
     color: #fff;
-    background-color: #383535;
     font-family: 'Arial', sans-serif;
     text-align: center;
     align-items: center;
 
     .flash-sale {
-        background-color: #1d1d1d;
-        box-shadow: 10px rgba(0, 0, 0, 0.2);
-        color: #fff;
         text-align: center;
         padding: 10px 20px;
         font-size: 16px;
         width: 100vw;
         font-weight: bold;
+    }
+
+    .hidden {
+        opacity: 0;
     }
 
     .title {
@@ -29,7 +171,6 @@
         font-size: 18px;
         font-weight: normal;
         opacity: 0.8;
-        color: #d6c400;
     }
 
     .products {
@@ -37,101 +178,142 @@
         grid-template-columns: repeat(3, 1fr);
         gap: 50px;
         padding: 20px 0;
-        
+
 
         .product-card {
             border-radius: 8px;
-            width: 400px; // Adjust based on the desired width
-            height: 300px;
+            width: 350px; // Adjust based on the desired width
+            height: 250px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             position: relative;
             text-align: center;
             margin-bottom: 20px;
             overflow: hidden;
-        
+
             img {
                 width: 100%;
                 height: auto;
                 display: block;
-                transition: transform 0.3s ease; 
-        
+                transition: transform 0.3s ease;
+
                 &:hover {
-                    transform: scale(1.05); 
+                    transform: scale(1.05);
                 }
             }
-        
+
             .discount-badge {
-                background-color: #f1c40f;
-                color: #000;
                 font-size: 14px;
                 font-weight: bold;
                 padding: 2px 10px;
                 border-radius: 10px;
-                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
                 position: absolute;
                 top: 10px;
                 right: 10px;
                 z-index: 10;
             }
-            
-        
+
+            .hot {
+                background-color: orange;
+                color: white;
+                box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+                font-size: 14px;
+                font-weight: bold;
+                padding: 2px 10px;
+                border-radius: 10px;
+                position: absolute;
+                top: 10px;
+                left: 10px;
+                z-index: 10;
+            }
+
             .product-info {
                 position: absolute;
                 bottom: 0; // Position at the bottom of the card
                 left: 0;
                 right: 0;
-                background-color: rgba(25, 25, 25,0.9); // Semi-transparent dark background
-                color: #fff;
                 padding: 10px 15px;
                 text-align: left;
                 border-bottom-left-radius: 8px; // Maintain rounded corners
                 border-bottom-right-radius: 8px;
-        
+
                 .product-title {
-                    font-size: 20px; 
-                    margin-bottom: 5px; 
+                    font-size: 20px;
+                    margin-bottom: 5px;
+                    font-weight: bold;
                 }
-        
+
                 .pricing {
                     display: flex;
                     align-items: baseline;
-        
+
                     .current-price {
-                        font-size: 24px; 
+                        font-size: 24px;
                         font-weight: bold;
-                        color: #f1c40f; 
-                        margin-right: 10px; 
+                        margin-right: 10px;
                     }
-        
+
                     .original-price {
                         font-size: 18px;
                         color: #777;
                         text-decoration: line-through;
                     }
                 }
-        
+
                 .category-button {
-                    background-color: transparent;
-                    color: #f1c40f;
-                    border: 2px solid #f1c40f;
                     border-radius: 15px;
                     padding: 8px 16px;
                     font-size: 14px;
                     font-weight: bold;
                     text-transform: uppercase;
                     cursor: pointer;
-                    transition: all 0.3s ease;
-        
-                    &:hover {
-                        background-color: #f1c40f;
-                        color: #000;
-                    }
                 }
-            }            
-        }        
+            }
+        }
 
     }
 
+    .cta-button {
+        border: none;
+        border-radius: 8px;
+        padding: 12px 24px;
+        font-size: 16px;
+        font-weight: bold;
+        text-transform: uppercase;
+        cursor: pointer;
+    }
+    .button-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        margin-top: 20px;
+      
+        .custom-button {
+          background-color: #1d1d6b;
+          color: #fff;
+          font-size: 16px;
+          font-weight: bold;
+          width: 250px;
+          height: 150px;
+          padding: 10px;
+          border: 2px solid #00008b;
+          border-radius: 10px;
+          text-align: center;
+          line-height: 1.5;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-transform: none;
+          transition: transform 0.3s ease, background-color 0.3s ease;
+          cursor: pointer;
+      
+          &:hover {
+            background-color: #2525a0;
+            transform: scale(1.05);
+          }
+        }
+      }
+      
     .footer {
         position: absolute;
         bottom: 0px;
@@ -145,8 +327,9 @@
         .footer-content {
             display: flex;
             justify-content: space-between;
-            align-items: center;
             width: 100%;
+            text-align: left;
+            line-height: 1.2;
             margin: 0 auto;
             padding-right: 20px;
             box-sizing: border-box;
