--- a/frontend/src/app/features/shopping/website/website.component.scss
+++ b/frontend/src/app/features/shopping/website/website.component.scss
@@ -140,6 +140,50 @@
     }
 }
 
+.text-cart{
+    position: relative;
+}
+.shopping-cart {
+    right: 5px;
+    top: 65px;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-family: Arial, sans-serif;
+    color: #b3b3b3;
+  
+    .cart-icon {
+      position: relative;
+      width: 60px;
+      height: 60px;
+  
+      .cart-image {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+  
+      .item-count {
+        position: absolute;
+        top: -10px;
+        right: 18px;
+        color: #b3b3b3;
+        font-weight: bold;
+        font-size: 20px;
+        line-height: 1;
+      }
+    }
+  
+    .cart-label {
+      margin-top: 5px;
+      font-size: 14px;
+      font-weight: 300;
+      color: #b3b3b3;
+    }
+  }  
+
+
 .deals-container {
     display: flex;
     flex-direction: column;
