ai chatbot almost completed

--- a/frontend/src/app/features/ai/ai.component.html
+++ b/frontend/src/app/features/ai/ai.component.html
@@ -1,1 +1,7 @@
-<p>ai works!</p>
+<div class="container">
+    <!-- <div class="spy-column" [class.hidden] = "ai.Hidespy">
+        <app-spy [isRight] = "ai.isspyright" [gameStep]="ai.currentGameStep" (clickedNext)="ai.next()"></app-spy>
+    </div>
+    <app-hausaufgabe [ngClass]="{'hidden': !(ai.currentIndex == 3)}"></app-hausaufgabe> -->
+    <app-chatbot></app-chatbot>
+  </div>
