--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+@if(this.isLoading){
+    <app-image-loading></app-image-loading>
+}
+@if(!this.isLoading){
+    <router-outlet></router-outlet>
+}
