passwordgame frontend restored

--- a/frontend/src/app/features/laptop/monitor/monitor.component.html
+++ b/frontend/src/app/features/laptop/monitor/monitor.component.html
@@ -2,6 +2,6 @@
 
     <div class="screen">
 
-        <app-spy (clickedNext)="passwordService.next()" [gameStep]="passwordService.currentGameStep"></app-spy>
+        <app-spy (clickedNext)="next()" [gameStep]="passwordService.currentGameStep"></app-spy>
     </div>
 </div>
