--- a/frontend/src/app/features/laptop/monitor/monitor.component.scss
+++ b/frontend/src/app/features/laptop/monitor/monitor.component.scss
@@ -16,7 +16,8 @@
         display: flex;
         justify-content: center;
         align-items: center;
-
+        border: 10px solid gray;
+        border-radius: 10px;
     }
 
 }
