--- a/frontend/src/app/features/laptop/analyze/analyze.component.scss
+++ b/frontend/src/app/features/laptop/analyze/analyze.component.scss
@@ -8,3 +8,59 @@
     justify-content: center;
     align-items: center;
 }
+.analyzer-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 60vh;
+    width: 40vw;
+    background-color: #b9b9b9d0;
+}
+
+.animation {
+    text-align: center;
+    color: #fff;
+    border-radius: 50%;
+    width: 100%;
+    .progress-bar {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+    }
+}
+
+.icon {
+    //font-size: 3rem;
+    margin-bottom: 1rem;
+    animation: fade-in 1s ease-in-out forwards;
+}
+
+.text {
+    font-size: 1.5rem;
+    animation: fade-in 1s ease-in-out forwards;
+}
+
+h6 {
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: left;
+    color: #ffffff;
+    text-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
+    letter-spacing: 2px;
+    margin-top: 20px;
+    margin-bottom: 0px;
+}
+
+.small{
+    width: 70%;
+    max-height: 100%;
+    overflow: scroll;
+}
+
+ul {
+    margin-top: 0;
+    li{
+        display: flex;
+  justify-content: space-between;
+    }
+}
