images for analyzing pwd

--- a/frontend/src/app/features/laptop/analyze/analyze.component.html
+++ b/frontend/src/app/features/laptop/analyze/analyze.component.html
@@ -3,7 +3,7 @@
     <div class="analyzer-container">
         <div class="animation" *ngIf="currentStep < 4">
             <div class="icon" *ngIf="currentStep === 0">
-                <img src="/assets/password/lineal.png" />
+                <img src="/assets/password/ruler.png" />
             </div>
             <div class="icon" *ngIf="currentStep === 1">
                 <img src="/assets/password/gear.png" />
