more images and end comp for pwgame

--- a/frontend/src/app/features/start/start-button-screen/start-button-screen.component.html
+++ b/frontend/src/app/features/start/start-button-screen/start-button-screen.component.html
@@ -2,7 +2,7 @@
 
     <div>
         <h1>
-            Cyper Spion - Sicher unterwegs<br>
+            Cyber Spion - Sicher unterwegs<br>
             in geheimer Mission
         </h1>
     </div>
