--- a/frontend/src/app/features/ai/ai.component.html
+++ b/frontend/src/app/features/ai/ai.component.html
@@ -1,7 +1,7 @@
 <div class="container">
-    <!-- <div class="spy-column" [class.hidden] = "ai.Hidespy">
+    <div class="spy-column" [class.hidden] = "ai.Hidespy" [ngClass]="getclass()">
         <app-spy [isRight] = "ai.isspyright" [gameStep]="ai.currentGameStep" (clickedNext)="ai.next()"></app-spy>
     </div>
-    <app-hausaufgabe [ngClass]="{'hidden': !(ai.currentIndex == 3)}"></app-hausaufgabe> -->
-    <app-chatbot></app-chatbot>
+    <app-hausaufgabe [ngClass]="{'hidden': !(ai.currentIndex == 3 || ai.currentIndex == 4)}"></app-hausaufgabe>
+    <app-chatbot [ngClass]="{'hidden': !(ai.currentIndex > 4)}"></app-chatbot>
   </div>
