--- a/frontend/src/app/features/start/enter-class/enter-class.component.html
+++ b/frontend/src/app/features/start/enter-class/enter-class.component.html
@@ -1,3 +1,4 @@
+<app-loader [isLoading]="loading"></app-loader>
 <div class="container" >
     <div>
         <h2>Schreib dich in deine Klasse ein</h2>
