--- a/frontend/src/app/core/components/cockpit/cockpit.component.html
+++ b/frontend/src/app/core/components/cockpit/cockpit.component.html
@@ -1,2 +1,2 @@
 <router-outlet></router-outlet>
-<img class="lexikon-button" src="assets/lexicon.png" (click)="openDialog()" *ngIf="lexicon.isVisible">
+<img class="lexikon-button" src="assets/lexicon.png" (click)="openDialog()" >
