--- a/frontend/src/app/features/scoreboard/scorelist/scorelist.component.html
+++ b/frontend/src/app/features/scoreboard/scorelist/scorelist.component.html
@@ -4,7 +4,7 @@
     <div class="list">
         <div class="header">
             <div>
-                Klasse 8A
+                Rangliste
             </div>
         </div>
         <div class="top3">
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <button mat-fab extended style="position: absolute; right: 50px; bottom: 50px;" (click)="loadRanks()">
+    <button mat-fab extended style="position: absolute; right: 50px; bottom: 50px; background-color: lightblue; color: blue" (click)="loadRanks()">
         <mat-icon>refresh</mat-icon>
         Aktualisieren
     </button>
