cookie screen change

--- a/frontend/src/app/features/cookie/game/feedback-dialog/feedback-dialog.component.html
+++ b/frontend/src/app/features/cookie/game/feedback-dialog/feedback-dialog.component.html
@@ -12,23 +12,15 @@
     </div>
     <div>
         <div style="background-color: #444444; border-radius: 10px; padding: 10px; text-align: center;">
-            <p>Drücke auf weiter wenn du mit deinen gebackenen Cookies zufrieden bist, ansonsten kannst du es nochmal
-                probieren!</p>
+            <p>Gut gemacht!</p>
         </div>
 
         <div class="actions">
-
-            <div class="butt">
-                <div class="icon">
-                    <img src="/assets/cookies/icons/restart.png" />
-                </div>
-                <div>Noch 2 Versuche</div>
-            </div>
             <div class="butt">
                 <div class="icon" (click)="continue()">
                     <img src="/assets/cookies/icons/continue.png" />
                 </div>
-                <div>Weiter</div>
+                <div>Zum Cockpit</div>
             </div>
 
         </div>
